Autoplay: allow autoplay for Presentation Receiver document.

The autoplay policy shouldn't apply to a Presentation Receiver document
given that it has to be created via the Presentation API and is only
visible on the second screen.

Bug: 877546
Change-Id: I346883ba68247889506f0abb84bccfbe6c82fdb9
Reviewed-on: https://chromium-review.googlesource.com/1191529
Reviewed-by: mark a. foltz <mfoltz@chromium.org>
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586448}
Former-commit-id: 8627f57b9bdafccc6f79e37a999c10b67a42fddb