third_party/blink/renderer/core/html/media/autoplay_policy.cc
@@ -89,6 +89,9 @@ AutoplayPolicy::Type AutoplayPolicy::GetAutoplayPolicyForDocument(
   if (DocumentHasUserExceptionFlag(document))
     return Type::kNoUserGestureRequired;
 
+  if (document.GetSettings()->GetPresentationReceiver())
+    return Type::kNoUserGestureRequired;
+
   return document.GetSettings()->GetAutoplayPolicy();
 }
 
